# iiwa_toolkit

./: .gitmodules  CTestConfiguration.ini
atomic_configure/: setup.sh
catkin_generated/: generate_cached_setup.py  setup_cached.sh
config/: passive_track_params.yaml  passive_track_params_dual.yaml  passive_track_params_gazebo.yaml
devel/: .rosinstall  local_setup.sh
python_binding/: CMakeLists.txt
python_binding/include/: Utils.cpp  Utils.h  iiwa_tools.h  passive_control.h
python_binding/pythonApi/: py_full_inertial_control.cpp  py_passive_inertial_control.cpp  py_wrap_passive_control.cpp  wrap_passive_control.cpp
python_binding/src/: iiwa_tools.cpp  node_passive_track.cpp  passive_control.cpp  qp_control.cpp
python_binding/stein_distance/: stein_inertia_1.csv
src/: node_passive_track.cpp
